{
    "name": "EyeInputActionAsset",
    "maps": [
        {
            "name": "EyeActions",
            "id": "0a7c024e-3241-42d4-a61f-13fe7f3dd31f",
            "actions": [
                {
                    "name": "pose/Velocity",
                    "type": "Value",
                    "id": "a99d43de-3e32-43a8-a24c-8f4467917ca5",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "pose/Position",
                    "type": "Value",
                    "id": "461d205c-9e76-4fdb-89cb-281bfca8acc8",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "pose/Angular Velocity",
                    "type": "Value",
                    "id": "e8850b8e-c5e3-4bbe-8c45-c64d02e97df4",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftEyePosition",
                    "type": "Value",
                    "id": "d3f87efd-3c93-4575-918e-051c0282d108",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightEyePosition",
                    "type": "Value",
                    "id": "1ca0e052-2907-4ce3-909d-9c0bd1326d93",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CenterEyePosition",
                    "type": "Value",
                    "id": "efe57485-b474-436c-95f6-85b3899c91b7",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CenterEyeRotation",
                    "type": "Value",
                    "id": "7b47b4b7-a956-4567-9313-53c389b5c018",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightEyeRotation",
                    "type": "Value",
                    "id": "9ad019e1-532b-4637-94dc-22d759e839a9",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftEyeRotation",
                    "type": "Value",
                    "id": "b375010d-ae99-405a-ad2c-64393ebf7f8b",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CenterEyeAngularVel",
                    "type": "PassThrough",
                    "id": "eb009e22-aa30-44db-8dbb-adf31af46b00",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1248b002-fdaf-4ce2-b534-94a63298ccdb",
                    "path": "<EyeGaze>/pose/velocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pose/Velocity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d29b320-cabf-4e9f-a3b8-b9f74fe233c3",
                    "path": "<EyeGaze>/pose/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pose/Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de76c4ce-3022-4ea5-9619-f7a234695d08",
                    "path": "<EyeGaze>/pose/angularVelocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "pose/Angular Velocity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f28725f-4198-44cb-b9ea-dece5c4f7852",
                    "path": "*/{LeftEyePosition}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67742c6b-f3fb-4750-8bf2-fb7d9b333959",
                    "path": "*/{RightEyePosition}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c98c22be-897c-446c-82b6-5074b0088758",
                    "path": "*/{CenterEyePosition}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "892453f5-9080-4196-aecb-bfed2786af63",
                    "path": "*/{CenterEyeRotation}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyeRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e9e207c-90b1-46f5-a25f-9c694cfe93bc",
                    "path": "*/{RightEyeRotation}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightEyeRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f523ebc-1dd6-4aae-a8ad-bbfafe2c7a7b",
                    "path": "*/{LeftEyeRotation}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftEyeRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e81870f-9fc8-45c3-bde8-31399743351e",
                    "path": "*/{CenterEyeAngularVelocity}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterEyeAngularVel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}